--- a/chris/w09/d01/twitter/Gemfile
+++ b/chris/w09/d01/twitter/Gemfile
@@ -26,6 +26,10 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
+group :development do
+  gem "better_errors"
+end
+
 # Use Unicorn as the app server
 # gem 'unicorn'
 
