speeding up test suite with spring

--- a/chris/w10/hairy_bnb/Gemfile
+++ b/chris/w10/hairy_bnb/Gemfile
@@ -22,6 +22,7 @@ end
 
 group :development, :test do
   gem 'rspec-rails'
+  gem 'spring-commands-rspec'
   gem 'capybara'                    #UI testing
   gem 'factory_girl_rails'          #model testing
   gem 'byebug'
